@@ -1,27 +1,0 @@
-<?php
-
-declare(strict_types=1);
-
-namespace meteocontrol\client\vcomapi\endpoints\sub\tickets;
-
-use meteocontrol\client\vcomapi\endpoints\EndpointInterface;
-use meteocontrol\client\vcomapi\endpoints\sub\SubEndpoint;
-use meteocontrol\client\vcomapi\filters\YieldLossesCriteria;
-use meteocontrol\client\vcomapi\model\YieldLoss;
-
-/**
- * @deprecated It is scheduled to be removed on 2024-06-30.
- */
-class DirectMarketing extends SubEndpoint {
-
-    public function __construct(EndpointInterface $parent) {
-        $this->uri = '/direct-marketing';
-        $this->api = $parent->getApiClient();
-        $this->parent = $parent;
-    }
-
-    public function get(YieldLossesCriteria $criteria): YieldLoss {
-        $json = $this->api->run($this->getUri(), $criteria->generateQueryString());
-        return YieldLoss::deserialize($this->jsonDecode($json, true)['data']);
-    }
-}
