@@ -20,11 +20,4 @@ class Peak extends SubEndpoint {
     public function energyTrader(): EnergyTrader {
         return new EnergyTrader($this);
     }
-
-    /**
-     * @deprecated It is scheduled to be removed on 2024-06-30.
-     */
-    public function directMarketing(): DirectMarketing {
-        return new DirectMarketing($this);
-    }
 }
