@@ -133,30 +133,4 @@ class FlatRateTest extends TestCase {
 
         $this->api->ticket($this->ticketId)->yieldLosses()->flatRate()->energyTrader()->replace($criteria, $yieldLoss);
     }
-
-    public function testGetCalculationResultUsingDirectMarketingSource(): void {
-        $json = file_get_contents(__DIR__ . '/responses/getFlatRateDirectMarketing.json');
-
-        $criteria = new YieldLossesCriteria();
-        $criteria->withDateFrom(DateTime::createFromFormat(DATE_ATOM, '2022-05-25T00:00:00+00:00'))
-            ->withDateTo(DateTime::createFromFormat(DATE_ATOM, '2022-05-31T23:59:59+00:00'));
-
-        $this->api->expects($this->once())
-            ->method('run')
-            ->with(
-                $this->identicalTo('tickets/457564/yield-losses/flat-rate/direct-marketing'),
-                $this->identicalToUrl(
-                    'from=2022-05-25T00:00:00+00:00' .
-                    '&to=2022-05-31T23:59:59+00:00'
-                )
-            )
-            ->willReturn($json);
-
-        $calculationResult = $this->api->ticket($this->ticketId)->yieldLosses()->flatRate()->directMarketing()->get($criteria);
-
-        $this->assertEquals(1852.42, $calculationResult->result);
-        $this->assertEquals(1852.42, $calculationResult->realLostYield);
-        $this->assertEmpty($calculationResult->comment);
-        $this->assertEquals(136.52, $calculationResult->totalCompensation);
-    }
 }
