@@ -1,8 +1,0 @@
-{
-  "data": {
-    "result": 1852.42,
-    "realLostYield": 1852.42,
-    "comment": "",
-    "totalCompensation": 136.52
-  }
-}
