@@ -1,8 +1,0 @@
-{
-  "data": {
-    "result": 1682.19,
-    "realLostYield": 1682.19,
-    "comment": "",
-    "totalCompensation": 123.98
-  }
-}
